# cpp-kwargs

./: .gitattributes  .gitignore  CMakeLists.txt  CppKwargs.h  LICENSE  README.md  README_EN.md  README_English.md  test.cpp
docs/: Kwargs.md  KwargsKey.md  KwargsValue.md  Kwargs_DataItem.md  operator _opt.md
docs/cn/: Kwargs.md  KwargsKey.md  KwargsValue.md  Kwargs_DataItem.md  operator _opt.md
docs/en/: Kwargs.md  KwargsKey.md  KwargsValue.md  Kwargs_DataItem.md  operator _opt.md
docs_English/: Kwargs.md  KwargsKey.md  KwargsValue.md  Kwargs_DataItem.md  operator _opt.md
include/: kwargs.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp  test.h  test__detail__constant_name.cpp  test__detail__enum_name.cpp  test__detail__type_name.cpp  test__speed__detail__bit_swap.cpp  test__to_array.cpp  test__to_char.cpp  test__to_char_pointer.cpp  test__to_floating_point.cpp  test__to_insertable.cpp  test__to_integral.cpp  test__to_pointer.cpp  test__to_string.cpp  test__to_string_view.cpp  test__to_tuple.cpp  test_h_impl.cpp
